# lsp

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
lsp-generator/: Cargo.toml
lsp-generator/src/: generator.rs  lib.rs  main.rs  names.rs  spec.rs
src/: .gitignore  lib.rs  uri.rs
