[package]
name = "lsp"
version = "0.1.0"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "Language Server Protocol"
homepage = "https://github.com/macmv/lsp"
repository = "https://github.com/macmv/lsp"
documentation = "https://docs.rs/lsp"
readme = "README.md"
include = ["src/*.rs", "src/lsp_version.txt"]

keywords = ["lsp", "protocol", "language-server", "language-server-protocol"]
categories = ["api-bindings", "development-tools", "text-editors"]

[workspace]
members = ["lsp-generator"]

[dependencies]
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
